objects/Camping_Item__c.object
<CustomObject><fields>
        <fullName>Packed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Camping Item</label><nameField>
        <label>Camping Item Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Camping Items</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>